# regretwatch

./: .gitignore  .importlinter  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.d2
results/: v0.1.0a1_metrics.json  v0.1.0a2_metrics.json
scripts/: run_gates.py
src/regretwatch/: __init__.py  _claims.py  _types.py  baselines.py  cli.py  io.py  killgate.py  oracle.py  regret.py  report.py  synth.py  votecheck.py
src/regretwatch/adapters/: __init__.py  generic_csv.py  lm_eval.py  monkey_business.py  simple_evals.py  verl.py
src/regretwatch/schema/: regretwatch.schema.v1.json
tests/: test_baselines.py  test_gates.py  test_honesty.py  test_io_cli_adapters.py  test_oracle.py  test_regret_killgate.py  test_votecheck.py
